differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr66810.c-4.8.2-2.out.txt
pr66810.c: In function ‘i’:
pr66810.c:9:14: error: storage size of ‘a’ isn’t constant
   static int a[vv];  
              ^
